--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,12 @@ table, th, td {
 
 }
 
+body {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
+}
+
 .input-group {
   margin: 0 auto;
   float: node;
