add custom padding to plays and postplay pages

--- a/style/style.css
+++ b/style/style.css
@@ -33,3 +33,15 @@ body {
 .button-custom-size-200 {
     width: 200px !important;
 }
+
+.postplay-form-custom-padding {
+    padding-right: 80px;
+    padding-bottom: 50px;
+    padding-left: 30px;
+}
+
+.play-div-custom-padding {
+    padding-right: 15px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+}
