--- a/style/style.css
+++ b/style/style.css
@@ -57,3 +57,9 @@ body {
     padding-bottom: 50px;
     padding-left: 50px;
 }
+
+.playdetail-div-custom-padding {
+    padding-right: 200px;
+    padding-bottom: 80px;
+    padding-left: 80px;
+}
