Falculty routes set up

--- a/style/style.css
+++ b/style/style.css
@@ -57,6 +57,12 @@ body {
     padding-left: 30px;
 }
 
+.postuser-form-custom-padding {
+    padding-right: 80px;
+    padding-bottom: 50px;
+    padding-left: 30px;
+}
+
 .play-div-custom-padding {
     padding-right: 15px;
     padding-bottom: 30px;
